Добавил декоротивные элементы за гитариста

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,10 @@
         <div class="container main-section__content-container">
             <!-- левая часть первой секции -->
             <div class="left-wrapper">
-                
+                <img src="img/Фото гитариста.png" alt="фото гитариста" class="left-wrapper__img">
+                <div class="left-wrapper__rectangle-blue"></div>
+                <div class="left-wrapper__rectangle-orange"></div>
+                <div class="left-wrapper__rectangle-gray"></div>
             </div>
         </div>
     </div>
