--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,10 @@
                 <div class="left-wrapper__rectangle-orange"></div>
                 <div class="left-wrapper__rectangle-gray"></div>
             </div>
+                        <!-- левая часть первой секции -->
+            <div class="right-wrapper">
+                                <div class="icons"></div>
+            </div>
         </div>
     </div>
 </body>
