--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
             </header>
             <nav class="main-section__nav nav-menu">
                 <ul class="nav-menu__list">
-                    <li class="nav-menu__list-item">Обо мне</li>
-                    <li class="nav-menu__list-item">Занятия</li>
-                    <li class="nav-menu__list-item">Запись</li>
+                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#">Обо мне</a></li>
+                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#">Занятия</a></li>
+                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="">Запись</a></li>
                 </ul>
             </nav>
         </div>
@@ -103,8 +103,64 @@
             <div class="elipse__subtract elipse__subtract--big"></div>
         </div>
     </section>
-    <section class="main-previu">
+    <!-- вторая секция -->
+    <section class="second-section">
+        <div class="second-section__container container">
+            <!-- заголовок -->
+            <h2 class="second-section__title title">Преподаю
+                <hr class="title__hr">
+            </h2>
+            <!-- карточки -->
+            <div class="second-section__card-box">
+                <div class="second-section__card-item card-item">
+                    <img class="card-item__img" src="img/Вторая секция/img/Электро-гитара.png" alt="Электро-гитара">
+                    <p class="card-item__text">Электро <br>гитара</p>
+                </div>
 
+                <div class="second-section__card-item card-item card-item--orange">
+                    <img class="card-item__img" src="img/Вторая секция/img/Акустика-гитара.png" alt="Акустика-гитара">
+                    <p class="card-item__text">Акустика<br>гитара</p>
+                </div>
+
+                <div class="second-section__card-item card-item card-item--blue">
+                    <img class="card-item__img" src="img/Вторая секция/img/Укулелли-гитара.png" alt="Укулелли-гитара">
+                    <p class="card-item__text">Укулелли<br>гитара</p>
+                </div>
+            </div>
+            <!-- иконки второй секции -->
+            <div class="second-section__icons-box icons-box">
+                <div class="second-section__icons-item icons-item">
+                    <img src="img/Вторая секция/img/01-Иконка.svg" alt="кубок" class="icons-item__img">
+                    <p class="icons-item__text"><span>7</span><br> лет <br>преподавания</p>
+                </div>
+
+                <div class="second-section__icons-item icons-item">
+                    <img src="img/Вторая секция/img/04-Иконка_вторая секкция 1.svg" alt="кубок" class="icons-item__img">
+                    <p class="icons-item__text"><span>276</span><br> отзывов <br>на 5 звезд</p>
+                </div>
+
+                <div class="second-section__icons-item icons-item">
+                    <img src="img/Вторая секция/img/03-Иконка_вторая секкция 1.svg" alt="кубок" class="icons-item__img">
+                    <p class="icons-item__text"><span>314</span><br>студентов <br>обучено</p>
+                </div>
+
+                <div class="second-section__icons-item icons-item">
+                    <img src="img/Вторая секция/img/02-Иконка_вторая секкция 1.svg" alt="кубок" class="icons-item__img">
+                    <p class="icons-item__text"><span>2000</span><br> часов<br>преподавания</p>
+                </div>
+            </div>
+
+            <!-- круг -->
+            <div class="second-section__first-elipse elipse">
+                <div class="elipse__subtract elipse__subtract--white"></div>
+            </div>
+
+                <!-- круг -->
+            <div class="second-section__second-elipse elipse">
+                <div class="elipse__subtract elipse__subtract--white"></div>
+            </div>
+
+        </div>
     </section>
 </body>
 
