--- a/src/index.html
+++ b/src/index.html
@@ -20,22 +20,25 @@
             </header>
             <nav class="main-section__nav nav-menu">
                 <ul class="nav-menu__list">
-                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#">Обо мне</a></li>
-                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#">Занятия</a></li>
-                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="">Запись</a></li>
+                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#">
+                        Обо мне</a></li>
+                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#">
+                        Занятия</a></li>
+                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="">
+                        Запись</a></li>
                 </ul>
             </nav>
         </div>
         <div class="container main-section__content-container">
             <!-- левая часть первой секции -->
-            <div class="left-wrapper">
+            <div class="main-section__left-wrapper left-wrapper">
                 <img src="img/Фото гитариста.png" alt="фото гитариста" class="left-wrapper__img">
                 <div class="left-wrapper__rectangle-blue"></div>
                 <div class="left-wrapper__rectangle-orange"></div>
                 <div class="left-wrapper__rectangle-gray"></div>
             </div>
             <!-- левая часть первой секции -->
-            <div class="right-wrapper">
+            <div class="main-section__right-wrapper right-wrapper">
                 <div class="right-wrapper__icons-box icons">
                     <div class="icons__item">
                         <svg class="icons__skype" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -84,12 +87,15 @@
                 <h1 class="right-wrapper__title title">Я Виктор
                     <hr class="title__hr">
                 </h1>
-                <p class="right-wrapper__text">Репетитор игры на гитаре с семилетним опытом преподавания</p>
+                <p class="right-wrapper__text">
+                    Репетитор игры на гитаре с семилетним опытом преподавания</p>
                 <div class="right-wrapper__button buttons">
-                    <button class="buttons__main-btn">Забронировать<br>урок</button>
+                    <button class="buttons__main-btn">
+                        Забронировать<br>урок</button>
                     <div class="right-wrapper__icon-btn buttons__icon-btn">
                         <img src="/src/img/Первая секция/icons/icon/icon-chat1.svg" alt="Иконка чата">
-                        <p class="buttons__text">Есть<br> вопросы?</p>
+                        <p class="buttons__text">
+                            Есть<br> вопросы?</p>
                     </div>
                 </div>
             </div>
@@ -107,46 +113,54 @@
     <section class="second-section">
         <div class="second-section__container container">
             <!-- заголовок -->
-            <h2 class="second-section__title title">Преподаю
+            <h2 class="second-section__title title">
+                Преподаю
                 <hr class="title__hr">
             </h2>
             <!-- карточки -->
             <div class="second-section__card-box">
                 <div class="second-section__card-item card-item">
                     <img class="card-item__img" src="img/Вторая секция/img/Электро-гитара.png" alt="Электро-гитара">
-                    <p class="card-item__text">Электро <br>гитара</p>
+                    <p class="card-item__text">
+                        Электро <br>гитара</p>
                 </div>
 
                 <div class="second-section__card-item card-item card-item--orange">
                     <img class="card-item__img" src="img/Вторая секция/img/Акустика-гитара.png" alt="Акустика-гитара">
-                    <p class="card-item__text">Акустика<br>гитара</p>
+                    <p class="card-item__text">
+                        Акустика<br>гитара</p>
                 </div>
 
                 <div class="second-section__card-item card-item card-item--blue">
                     <img class="card-item__img" src="img/Вторая секция/img/Укулелли-гитара.png" alt="Укулелли-гитара">
-                    <p class="card-item__text">Укулелли<br>гитара</p>
+                    <p class="card-item__text">
+                        Укулелли<br>гитара</p>
                 </div>
             </div>
             <!-- иконки второй секции -->
             <div class="second-section__icons-box icons-box">
                 <div class="second-section__icons-item icons-item">
                     <img src="img/Вторая секция/img/01-Иконка.svg" alt="кубок" class="icons-item__img">
-                    <p class="icons-item__text"><span>7</span><br> лет <br>преподавания</p>
+                    <p class="icons-item__text">
+                        <span>7</span><br> лет <br>преподавания</p>
                 </div>
 
                 <div class="second-section__icons-item icons-item">
                     <img src="img/Вторая секция/img/04-Иконка_вторая секкция 1.svg" alt="кубок" class="icons-item__img">
-                    <p class="icons-item__text"><span>276</span><br> отзывов <br>на 5 звезд</p>
+                    <p class="icons-item__text">
+                        <span>276</span><br> отзывов <br>на 5 звезд</p>
                 </div>
 
                 <div class="second-section__icons-item icons-item">
                     <img src="img/Вторая секция/img/03-Иконка_вторая секкция 1.svg" alt="кубок" class="icons-item__img">
-                    <p class="icons-item__text"><span>314</span><br>студентов <br>обучено</p>
+                    <p class="icons-item__text">
+                        <span>314</span><br>студентов <br>обучено</p>
                 </div>
 
                 <div class="second-section__icons-item icons-item">
                     <img src="img/Вторая секция/img/02-Иконка_вторая секкция 1.svg" alt="кубок" class="icons-item__img">
-                    <p class="icons-item__text"><span>2000</span><br> часов<br>преподавания</p>
+                    <p class="icons-item__text">
+                        <span>2000</span><br> часов<br>преподавания</p>
                 </div>
             </div>
 
@@ -160,6 +174,63 @@
                 <div class="elipse__subtract elipse__subtract--white"></div>
             </div>
 
+        </div>
+    </section>
+    <!-- третья секция -->
+    <section class="third-section">
+        <div class="third-section__container container">
+                    <!-- левая обертка  -->
+            <div class="third-section__left-wraper">
+                <h3 class="second-section__title title">
+                    Обучение
+                    <hr class="title__hr">
+                </h3>
+
+                                <!-- круг -->
+            <div class="third-section__first-elipse elipse elipse--big">
+                <div class="elipse__subtract elipse__subtract--big"></div>
+            </div>
+                                <!-- элипс  -->
+                <img  class="third-section__figure" src="img/Вторая секция/img/Group 1.svg" alt="элипс">
+            </div>
+                                <!-- круг -->
+            <div class="third-section__second-elipse elipse elipse--big">
+                <div class="elipse__subtract elipse__subtract--big"></div>
+            </div>
+                            <!-- правая обертка  -->
+            <div class="third-section__right-wraper">
+                <h4 class="third-section__title title">
+                    Готовлю<br>виртуозов
+                    <hr class="title__hr title__hr--top">
+                </h4>
+                <p class="third-section__text"> 
+                    Равным образом рамки
+                    и место обучения кадров влечет за собой процесс
+                    внедрения и модернизации позиций, занимаемых 
+                    участниками в отношении поставленных задач. 
+                    Товарищи!
+                    Pеализация намеченных плановых 
+                    заданий позволяет выполнять важные задания 
+                    по разработке систем массового участия. 
+                    <br><br>
+                    Повседневная практика показывает, что рамки
+                    и место обучения кадров позволяет оценить 
+                    значение новых предложений. Не следует, однако 
+                    забывать, что рамки и место обучения кадров 
+                    влечет за собой процесс внедрения и модернизации 
+                    систем массового участия.
+                    
+                </p>
+                    <div class="right-wrapper__button buttons">
+                        <button class="buttons__main-btn">
+                            Забронировать<br>урок</button>
+                        <div class="right-wrapper__icon-btn buttons__icon-btn">
+                            <img src="/src/img/Первая секция/icons/icon/icon-chat1.svg" alt="Иконка чата">
+                            <p class="buttons__text">
+                                Есть<br> вопросы?</p>
+                        </div>
+                    </div>
+            </div>
         </div>
     </section>
 </body>
