--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Уроки игры на гитаре</title>
     <meta name="description" content="Репититор игры на гитаре в г. Сатка">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon_package_v0.16/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon_package_v0.16/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -20,11 +26,11 @@
             </header>
             <nav class="main-section__nav nav-menu">
                 <ul class="nav-menu__list">
-                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#">
+                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#about-me">
                         Обо мне</a></li>
-                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#">
+                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#classes">
                         Занятия</a></li>
-                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="">
+                    <li class="nav-menu__list-item"><a class="nav-menu__link" href="#">
                         Запись</a></li>
                 </ul>
             </nav>
@@ -37,7 +43,7 @@
                 <div class="left-wrapper__rectangle-orange"></div>
                 <div class="left-wrapper__rectangle-gray"></div>
             </div>
-            <!-- левая часть первой секции -->
+            <!-- правая часть первой секции -->
             <div class="main-section__right-wrapper right-wrapper">
                 <div class="right-wrapper__icons-box icons">
                     <div class="icons__item">
@@ -110,7 +116,7 @@
         </div>
     </section>
     <!-- вторая секция -->
-    <section class="second-section">
+    <section class="second-section" id="about-me">
         <div class="second-section__container container">
             <!-- заголовок -->
             <h2 class="second-section__title title">
@@ -177,7 +183,7 @@
         </div>
     </section>
     <!-- третья секция -->
-    <section class="third-section">
+    <section class="third-section"  id="classes">
         <div class="third-section__container container">
                     <!-- левая обертка  -->
             <div class="third-section__left-wraper">
