--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,11 @@
 
     <!-- Первая секция -->
     <section class="main-section">
-
+        <div class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <!-- ограничивающий контейнер нав меню -->
         <div class="container main-section__nav-container">
 
